# camtrol

./: Readme.md
AutoHomes/SQL_AuToHomes_SC01/: SQL_AuToHomes_SC01.sll  SQL_AuToHomes_SC01.spj  SQL_AuToHomes_SC01_events.py
AutoHomes/SQL_AuToHomes_ST7789/: SQL_AuToHomes_ST7789-V3.sll  SQL_AuToHomes_ST7789-V3.spj  SQL_AuToHomes_ST7789-V3_events.py
AutoHomes/autoHomes_esp32_V6.0/: platformio.ini
AutoHomes/autoHomes_flutter_v60/: pubspec.yaml
AutoHomes/esp32-AuToHomes-SC01-PLUS/: platformio.ini
CamTrol/: Read Me.txt  Readme.md
CamTrol/camtrol_esp32_HTML_V1.0/: platformio.ini
FullHouse/MotorHome/SQL-ST7789-MotorHome/SquareLine_ST7789V/libraries/ui/src/: CMakeLists.txt  filelist.txt  ui.c  ui.h  ui_Screen1.c  ui_Screen2.c  ui_Screen3.c  ui_Screen4.c  ui_Screen5.c  ui_Screen6.c  ui_ScreenQR.c  ui_comp_hook.c  ui_events.h  ui_helpers.c  ui_helpers.h  ui_img_1296478115.c  ui_img_logo_png.c
Gaon/SQL_Gaon_ST7789_Touch/: SQL_Gaon_ST7789_Touch.sll  SQL_Gaon_ST7789_Touch.spj  SQL_Gaon_ST7789_Touch_events.py
MS-Harnes/CarInd_esp32_V3.0/: platformio.ini
MS-Harnes/CarInd_esp32_V3.2/: .git_test.swp  README.md  platformio.ini  test.mmd
MS-Harnes/SQL-CarInd-SC01-PLUS-V2.0/: SQL-CarInd-SC01-PLUS-V2.0.sll  SQL-CarInd-SC01-PLUS-V2.0.spj  SQL-CarInd-SC01-PLUS-V2.0_events.py
MS-Harnes/SQL-CarInd-waveShare_4.3-V3.0/: SQL-CarInd-waveShare_4.3-V3.0.sll  SQL-CarInd-waveShare_4.3-V3.0.spj  SQL-CarInd-waveShare_4.3-V3.0_events.py
MS-Harnes/SQL-CarInd-waveShare_5.0-V3.0/: SQL-CarInd-waveShare_5.0-V3.0.sll  (+2 more)
Marre/SQL_Marre_ST7789-V3/SquareLine_ST7789V/libraries/ui/src/: CMakeLists.txt  filelist.txt  ui.c  ui.h  ui_helpers.c  ui_img_273796629.c  ui_img_273797654.c  ui_img_354864566.c
Marre/esp32-Marre-SC01-PLUS/src/ui/src/: CMakeLists.txt  ui.h  ui_ScreenColor.c  ui_ScreenSleep.c  ui_comp_hook.c  ui_events.h  ui_helpers.h  ui_img_100498730.c  ui_img_1366107189.c  ui_img_140512013.c  ui_img_140513036.c  ui_img_1543939845.c  ui_img_1719749116.c  ui_img_1719754239.c  ui_img_2022944295.c  ui_img_2022945322.c  ui_img_316327430.c  ui_img_460647138.c  ui_img_63382631.c  ui_img_765401749.c  ui_img_941217166.c  ui_img_campingcar_icons_png.c  ui_img_clockbg_png.c
(+970 files in other folders)
