SET(SOURCES ui_ScreenHome.c
    ui_ScreenQR.c
    ui_ScreenSleep.c
    ui_ScreenColor.c
    ui_ScreenClock.c
    ui.c
    ui_comp_hook.c
    ui_helpers.c
    ui_img_941217166.c
    ui_img_140512013.c
    ui_img_campingcar_icons_png.c
    ui_img_1965945753.c
    ui_img_213134014.c
    ui_img_100498730.c
    ui_img_63382631.c
    ui_img_1276658041.c
    ui_img_1965946780.c
    ui_img_1543939845.c
    ui_img_2022945322.c
    ui_img_1294863193.c
    ui_img_1247291337.c
    ui_img_941216143.c
    ui_img_460647138.c
    ui_img_1719749116.c
    ui_img_638533140.c
    ui_img_clockbg_png.c
    ui_img_hour_png.c
    ui_img_2022944295.c
    ui_img_140513036.c
    ui_img_1669298272.c
    ui_img_logo_png.c
    ui_img_min_png.c
    ui_img_1719754239.c
    ui_img_1847130928.c
    ui_img_1366107189.c
    ui_img_316327430.c
    ui_img_765401749.c
    ui_img_sec_png.c
    ui_img_sec_dot_png.c
    fonts/ui_font_DigitalPlaySt12.c
    fonts/ui_font_SOYOMapleBold12.c
    fonts/ui_font_SOYOMapleBold14.c
    fonts/ui_font_SOYOMapleBold18.c)

add_library(ui ${SOURCES})
